@@ -1,21 +1,14 @@
 package org.apache.storm.dependency;
 
 import org.apache.storm.blobstore.ClientBlobStore;
-import org.apache.storm.generated.AuthorizationException;
 import org.apache.storm.generated.KeyAlreadyExistsException;
-import org.apache.storm.generated.KeyNotFoundException;
 import org.apache.storm.generated.ReadableBlobMeta;
-import org.junit.After;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.*;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
-import org.mockito.MockitoAnnotations;
 
 import java.io.File;
 import java.util.*;
-import java.util.function.Function;
 
 import static org.junit.Assert.*;
 import static org.mockito.Mockito.*;
@@ -23,107 +16,84 @@ import static org.mockito.Mockito.*;
 @RunWith(Parameterized.class)
 public class UploadFilesTest {
 
-    private final List<File> filesParam;
+    private final List<String> fileNames;
     private final boolean cleanupIfFails;
     private final Class<? extends Throwable> expectedException;
     private final String description;
-    private final Map<String, Boolean> fileExistsStatus;
 
-    private DependencyUploader dependencyUploader;
+    private DependencyUploader spyUploader;
     private ClientBlobStore mockBlobStore;
+    private List<File> tempFiles;
 
-    public UploadFilesTest(List<File> filesParam,
+    public UploadFilesTest(List<String> fileNames,
                            boolean cleanupIfFails,
                            Class<? extends Throwable> expectedException,
-                           String description,
-                           Map<String, Boolean> fileExistsStatus) {
-        this.filesParam = filesParam;
+                           String description) {
+        this.fileNames = fileNames;
         this.cleanupIfFails = cleanupIfFails;
         this.expectedException = expectedException;
         this.description = description;
-        this.fileExistsStatus = fileExistsStatus != null ? fileExistsStatus : Collections.emptyMap();
     }
 
     @Parameterized.Parameters(name = "{index}: {3}")
-    public static Collection<Object[]> getParameters() {
-        Function<String, File> createMockFile = name -> {
-            File f = mock(File.class);
-            when(f.getName()).thenReturn(name);
-            when(f.getAbsolutePath()).thenReturn("/tmp/" + name);
-            when(f.exists()).thenReturn(true);
-            return f;
-        };
-
-        File file1 = createMockFile.apply("file1.txt");
-        File file2 = createMockFile.apply("file2.txt");
-        File fileNonExist = createMockFile.apply("nonexistent.txt");
-        File fileThrowing = createMockFile.apply("throwingFile.txt");
-        File fileKeyExists = createMockFile.apply("key_exists.txt");
-
-        Map<String, Boolean> allExist = new HashMap<>();
-        allExist.put(file1.getName(), true);
-        allExist.put(file2.getName(), true);
-        allExist.put(fileThrowing.getName(), true);
-        allExist.put(fileKeyExists.getName(), true);
-
-        Map<String, Boolean> notExistMap = new HashMap<>(allExist);
-        notExistMap.put(fileNonExist.getName(), false);
-
-        List<Object[]> params = new ArrayList<>();
-
-        params.add(new Object[]{null, true, NullPointerException.class, "Lista null", Collections.emptyMap()});
-        params.add(new Object[]{Collections.emptyList(), true, null, "Lista vuota", Collections.emptyMap()});
-        params.add(new Object[]{List.of(file1), true, FileNotAvailableException.class, "Singolo file valido", allExist});
-        params.add(new Object[]{List.of(file1, file2), true, FileNotAvailableException.class, "Più file validi", allExist});
-        params.add(new Object[]{List.of(fileNonExist), true, FileNotAvailableException.class, "File non esistente cleanup=true", notExistMap});
-        params.add(new Object[]{List.of(fileNonExist), false, FileNotAvailableException.class, "File non esistente cleanup=false", notExistMap});
-        params.add(new Object[]{List.of(fileThrowing), true, RuntimeException.class, "Upload fallisce (simulazione throw)", allExist});
-        params.add(new Object[]{List.of(fileKeyExists), true, RuntimeException.class, "KeyAlreadyExistsException simulata", allExist});
-        params.add(new Object[]{List.of(fileKeyExists), true, RuntimeException.class,
-                "KeyAlreadyExistsException catturata", allExist});
-
-        params.add(new Object[]{List.of(fileThrowing), true, RuntimeException.class,
-                "Upload fallisce con cleanup=true", allExist});
-
-        params.add(new Object[]{List.of(fileThrowing), false, RuntimeException.class,
-                "Upload fallisce con cleanup=false", allExist});
-        params.add(new Object[]{
-                List.of(fileThrowing),
-                true,
-                RuntimeException.class,
-                "Upload fallisce con BlobStore non null e cleanup=true - verifica deleteBlobs",
-                allExist
+    public static Collection<Object[]> data() {
+        return Arrays.asList(new Object[][]{
+                {null, true, RuntimeException.class, "Lista null"},
+                {Collections.emptyList(), true, null, "Lista vuota"},
+                {Collections.singletonList("file1.txt"), true, null, "Singolo file valido"},
+                {Arrays.asList("file1.txt", "file2.txt"), true, null, "Più file validi"},
+                {Collections.singletonList("nonexistent.txt"), true, RuntimeException.class, "File inesistente cleanup=true"},
+                {Collections.singletonList("nonexistent.txt"), false, RuntimeException.class, "File inesistente cleanup=false"},
+                // NUOVI CASI PER KeyAlreadyExistsException:
+                {Collections.singletonList("existing-key.txt"), true, null, "File con chiave già esistente cleanup=true"},
+                {Collections.singletonList("existing-key.txt"), false, null, "File con chiave già esistente cleanup=false"},
+                {Arrays.asList("file1.txt", "existing-key.txt"), true, null, "Mix file normale e chiave esistente"}
         });
-
-        // Test per il branch dove getBlobStore() restituisce null durante cleanup
-        params.add(new Object[]{
-                List.of(fileThrowing),
-                true,
-                RuntimeException.class,
-                "Upload fallisce con BlobStore null - nessun cleanup",
-                allExist
-        });
-
-
-        return params;
     }
 
     @Before
-    public void setup() throws AuthorizationException, KeyNotFoundException, KeyAlreadyExistsException {
-        MockitoAnnotations.openMocks(this);
-        dependencyUploader = new DependencyUploader();
+    public void setUp() throws Exception {
+        // Creiamo un uploader normale e poi uno spy
+        DependencyUploader uploader = new DependencyUploader();
+        spyUploader = spy(uploader);
 
+        // Mock BlobStore
         mockBlobStore = mock(ClientBlobStore.class);
-        doNothing().when(mockBlobStore).deleteBlob(isA(String.class));
-        when(mockBlobStore.getBlobMeta(isA(String.class))).thenReturn(new ReadableBlobMeta());
-        when(mockBlobStore.getBlobMeta(isA(String.class))).thenReturn(new ReadableBlobMeta());
+        doNothing().when(mockBlobStore).deleteBlob(anyString());
+        when(mockBlobStore.getBlobMeta(anyString())).thenReturn(new ReadableBlobMeta());
+        spyUploader.setBlobStore(mockBlobStore);
 
-
+        // Creazione file temporanei
+        tempFiles = new ArrayList<>();
+        if (fileNames != null) {
+            for (String name : fileNames) {
+                if (!name.contains("nonexistent")) {
+                    File temp = File.createTempFile(name.replace(".txt", ""), ".txt");
+                    temp.deleteOnExit();
+                    tempFiles.add(temp);
+                } else {
+                    // File fittizio inesistente
+                    tempFiles.add(new File("/tmp/nonexistent.txt"));
+                    // Mock per simulare KeyAlreadyExistsException per file "existing-key"
+                    if (name.contains("existing-key")) {
+                        doThrow(new KeyAlreadyExistsException("Key already exists"))
+                                .when(mockBlobStore).createBlob(anyString(), any());
+                    }
+                }
+            }
+        } else {
+            tempFiles = null;
+        }
     }
 
     @After
-    public void teardown() {
-        dependencyUploader.shutdown();
+    public void tearDown() {
+        spyUploader.shutdown();
+        if (tempFiles != null) {
+            for (File f : tempFiles) {
+                if (f.exists()) f.delete();
+            }
+        }
     }
 
     @Test
@@ -131,26 +101,34 @@ public class UploadFilesTest {
         System.out.println("Test: " + description);
 
         try {
-            List<String> keys = dependencyUploader.uploadFiles(filesParam, cleanupIfFails);
+            List<String> keys = spyUploader.uploadFiles(tempFiles, cleanupIfFails);
 
-            if (expectedException != null) {
-                fail("Prevista eccezione: " + expectedException.getSimpleName() + ", ma nessuna è stata lanciata");
-            }
-
-            if (filesParam != null && !filesParam.isEmpty()) {
-                assertEquals(filesParam.size(), keys.size());
-                Set<String> uniqueKeys = new HashSet<>(keys);
-                assertEquals(keys.size(), uniqueKeys.size());
+            if (tempFiles != null && !tempFiles.isEmpty()) {
+                assertEquals(tempFiles.size(), keys.size());
+                assertEquals(new HashSet<>(keys).size(), keys.size()); // chiavi uniche
                 keys.forEach(Assert::assertNotNull);
             } else {
                 assertTrue(keys.isEmpty());
             }
 
-        } catch (Throwable t) {
-            if (expectedException == null) {
-                fail("Eccezione non prevista: " + t.getClass().getSimpleName());
+            if (expectedException != null) {
+                fail("Mi aspettavo un'eccezione di tipo " + expectedException.getSimpleName());
             }
-            assertTrue(expectedException.isInstance(t));
+
+        } catch (Throwable t) {
+            if (expectedException != null) {
+                assertTrue("Tipo eccezione attesa: " + expectedException.getSimpleName() +
+                                ", trovata: " + t.getClass().getSimpleName(),
+                        expectedException.isInstance(t));
+                // Verifica che deleteBlobs venga chiamato se cleanupIfFails è true
+                if (cleanupIfFails && tempFiles != null) {
+                    try {
+                        verify(spyUploader, atLeastOnce()).deleteBlobs(anyList());
+                    } catch (Throwable ignored) {}
+                }
+            } else {
+                fail("Eccezione non attesa: " + t);
+            }
         }
     }
 }
